--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="net.ganjoor.MainActivity">
+    tools:context="net.ganjoor.ui.MainActivity">
 
     <FrameLayout
         android:id="@+id/content"
@@ -15,7 +15,7 @@
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/message"
+            android:id="@+id/messageTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
