create poet list Ui in dashboard fragment.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_poet_radius">0dp</dimen>
+    <dimen name="poet_cover_height">140dp</dimen>
+    <dimen name="poet_title_padding">10dp</dimen>
+    <dimen name="poet_title">15sp</dimen>
 </resources>
