--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="poet_title">#4c4c4c</color>
     <color name="viewBg">#f1f5f8</color>
+    <color name="grey500">#9E9E9E</color>
+    <color name="blackT87">#DE000000</color>
 </resources>
