--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="viewBg">#f1f5f8</color>
     <color name="grey500">#9E9E9E</color>
     <color name="blackT87">#DE000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
