replace VerseAdapter with FastAdapter library.

--- a/app/src/main/res/layout/verse_card.xml
+++ b/app/src/main/res/layout/verse_card.xml
@@ -15,10 +15,19 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp" />
+
             <TextView
                 android:id="@+id/verse_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/checkbox"
                 android:paddingLeft="@dimen/poet_title_padding"
                 android:paddingRight="@dimen/poet_title_padding"
                 android:paddingTop="@dimen/poet_title_padding"
