change VerseActivity code & UI for showing two verse in one item of recycler view. add Convert Verse class to VerseCombine function to AppUtils.

--- a/app/src/main/res/layout/verse_card.xml
+++ b/app/src/main/res/layout/verse_card.xml
@@ -23,16 +23,35 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp" />
 
-            <TextView
-                android:id="@+id/verse_text"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/checkbox"
-                android:paddingLeft="@dimen/poet_title_padding"
-                android:paddingRight="@dimen/poet_title_padding"
-                android:paddingTop="@dimen/poet_title_padding"
-                android:textColor="@color/title"
-                android:textSize="@dimen/verse_text" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/verse_text_right"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:paddingLeft="@dimen/poet_title_padding"
+                    android:paddingRight="@dimen/poet_title_padding"
+                    android:paddingTop="@dimen/poet_title_padding"
+                    android:textColor="@color/title"
+                    android:textSize="@dimen/verse_text" />
+
+                <TextView
+                    android:id="@+id/verse_text_left"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:paddingLeft="@dimen/poet_title_padding"
+                    android:paddingRight="@dimen/poet_title_padding"
+                    android:paddingTop="@dimen/poet_title_padding"
+                    android:textColor="@color/title"
+                    android:textSize="@dimen/verse_text" />
+
+            </LinearLayout>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
