--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,20 +7,23 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="AppThemeLight" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here.-->
         <item name="android:textColorPrimary">@color/blackT87</item>
         <item name="android:textColorSecondary">@color/grey500</item>
     </style>
+
     <style name="CollapsingToolbarTextStyle">
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textColor">@color/blackT87</item>
     </style>
+
     <style name="AppThemeCustomNoToolbar" parent="AppThemeLight">
         <!-- Customize your theme here.-->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/blackT87</item>
         <item name="android:textColorSecondary">@color/grey500</item>
     </style>
 </resources>
